src/test/test-models/bad/reserved/cholesky_factor_cov.stan
data {
  real cholesky_factor_cov;
}
model {
}
